// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > should render accordion 1`] = `
<div>
  <div
    data-accordion-root=""
    tabindex="0"
  >
    <!---->
     
    <!---->
     
    <div
      aria-disabled="false"
      data-accordion-item=""
      data-disabled="false"
      data-path="0"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        data-accordion-trigger=""
        data-disabled="false"
        role="button"
        tabindex="-1"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        <!---->
         
        <span
          data-accordion-icon=""
        >
          <icon
            aria-hidden="true"
            class="accordion-closed sm"
          />
          <!---->
        </span>
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
    <div
      aria-disabled="false"
      data-accordion-item=""
      data-disabled="false"
      data-path="1"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        data-accordion-trigger=""
        data-disabled="false"
        role="button"
        tabindex="-1"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 2
        </p>
        <!---->
        <!---->
         
        <span
          data-accordion-icon=""
        >
          <icon
            aria-hidden="true"
            class="accordion-closed sm"
          />
          <!---->
        </span>
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
    <!---->
     
    <!---->
  </div>
  
</div>
`;

exports[`Accordion > should render accordion 2`] = `
<div>
  <div
    class="another-class"
    data-accordion-root=""
    tabindex="0"
  >
    <!---->
     
    <!---->
     
    <div
      aria-disabled="false"
      data-accordion-item=""
      data-disabled="false"
      data-path="0"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        data-accordion-trigger=""
        data-disabled="false"
        role="button"
        tabindex="-1"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        <!---->
         
        <span
          data-accordion-icon=""
        >
          <icon
            aria-hidden="true"
            class="accordion-closed sm"
          />
          <!---->
        </span>
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
    <div
      aria-disabled="false"
      data-accordion-item=""
      data-disabled="false"
      data-path="1"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        data-accordion-trigger=""
        data-disabled="false"
        role="button"
        tabindex="-1"
      >
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 2
        </p>
        <!---->
        <!---->
         
        <span
          data-accordion-icon=""
        >
          <icon
            aria-hidden="true"
            class="accordion-closed sm"
          />
          <!---->
        </span>
        <!---->
      </div>
      <!---->
       
      <!---->
    </div>
    <!---->
     
    <!---->
  </div>
  
</div>
`;
